Fixed data overflowing

--- a/caeq-web-portal/src/components/cards/RegistrationCard.scss
+++ b/caeq-web-portal/src/components/cards/RegistrationCard.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     min-width: 300px;
     width: 45%;
+    max-height: 600px;
+    overflow: auto;
     border-radius: 20px;
     background: #fff;
     box-shadow: 4px 7px 15px 0px rgba(0, 0, 0, 0.35);
@@ -21,6 +23,7 @@
             display: flex;
             flex-direction: column;
             width: 50%;
+            overflow: auto;
 
             @media screen and (max-width: 768px) {
                 width: 100%;
